@@ -1,3 +1,4 @@
+Build a fraction: Made the background cream
 Added draggable fractions
 Build a Fraction: Added draggable numbers
 Matching game: Color each bar the same color as the corresponding representation
